# PhongShadingDemo

./: .gitmodules  CMakeLists.txt
Resources/Shaders/: Phong.frag.glsl  Phong.vert.glsl  Test.frag.glsl  Test.vert.glsl
Source/: Camera.cpp  Camera.h  ControlPanel.cpp  ControlPanel.h  GeometryObject.cpp  GeometryObject.h  PSD.h  Renderer.cpp  Renderer.h  main.cpp
Source/Core/: Application.cpp  Application.h  Input.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h
